feat: add aside, header and main layout

--- a/index.html
+++ b/index.html
@@ -5,37 +5,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100;0,300;1,400&display=swap"
+        rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <title>CV</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <header>
-            <h1 class="visually-hidden">title</h1>
-            <figure>
-                <div class="logo-img"></div>
-                <figcaption>
-                    <h2 class="name">Hanna Asipenka</h2>
-                    <h3 class="specialty">front end developer</h3>
-                </figcaption>
-            </figure>
-            <div class="contacts">
+        <div class="wrapper-HeaderMainFutter">
+            <header>
+                <h1 class="visually-hidden">title</h1>
+                <h2 class="name"><span>Hanna</span> Asipenka</h2>
+                <h3 class="specialty">front end developer</h3>
+            </header>
+            <main>
+                <h2>Experience</h2>
+                <ul>
+                    <li>
+                        <h3>My very first project:</h3>
+                        <a href="https://anna9394.github.io/markup/">Example</a>
+                        <a href="https://github.com/anna9394/markup">Source code</a>
+                    </li>
+                    <li>
+                        <h3>Latest projects (in order of difficulty):</h3>
+                        <h4>E-commerce markup:</h4>
+                        <a href="https://anna9394.github.io/maket/">Example</a>
+                        <a href="https://github.com/anna9394/maket">Source code</a>
+                        <h4>Landing page:</h4>
+                        <a href="https://anna9394.github.io/homeWork4/">Example</a>
+                        <a href="https://github.com/anna9394/homeWork4">Source code</a>
+                    </li>
+                </ul>
+            </main>
+        </div>
+        <aside>
+            <div class="logo-img">
+                <img src="img/foto.jpg" alt="foto">
+            </div>
+            <div class="wrapper-aside">
+                <h2>About me</h2>
+                <p>My first specialty is a doctor, but now I want to start a completely new one called Front-End
+                    Developer. I see IT as the fastest growing and most advanced sector in which all high technologies
+                    are concentrated. My strengths: work-focused, well organized, effective and efficient, ready to
+                    study something new.</p>
+            </div>
+            <div class="wrapper-aside">
+                <h2>Contact</h2>
                 <ul>
                     <li><a href="tel:+375555555">+375 (44) 55555555</a></li>
                     <li><a href="mailto:anna@gmail.com">anna@gmail.com</a></li>
-                </ul>
-                <ul>
                     <li><a href="skype:anna9394?call">anna9394</a></li>
                     <li><a href="https://github.com/anna9394">GitHub Account</a></li>
                 </ul>
             </div>
-        </header>
-        <main>
+            <div class="wrapper-aside">
+                <h2>Education</h2>
+                <ul>
 
-        </main>
+                    <li>
+                        <h4>02.2021 - present</h4>
+                        <a href="https://rs.school/js/">The Rolling Scopes School, Javascript/Front-end</a>
+                    </li>
+                    <li>
+                        <h4>12.2020- present</h4>
+                        <a href="https://www.codewars.com/users/anna9394">codewars</a>
+                    </li>
+                    <li>
+                        <h4>12.2020 - 02.2021</h4>
+                        <a href="https://ntschool.ru/kursyi/vyorstka/html5-pro">NTSchool advanced markup</a>
+                    </li>
+                    <li>
+                        <h4>01.2021-02.2021</h4>
+                        <a href="https://ntschool.ru/kursyi/vyorstka/javascript-simple">NTSchool JavaScript basics
+                        </a>
+                    </li>
+                    <li>
+                        <h4>10.2020-02.2021</h4>
+                        <a href="https://learn.javascript.ru/">learn.javascript</a>
+                    </li>
+                    <li>
+                        <h4>09.2020-10.2020</h4>
+                        <a href="https://htmlacademy.ru/">Marathon from HTML-academy</a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
     </div>
 </body>
 
 </html>
+
+<!-- <figure>
+    <div class="logo-img"></div>
+    <figcaption>
+        <h2 class="name">Hanna Asipenka</h2>
+        <h3 class="specialty">front end developer</h3>
+    </figcaption>
+</figure> -->
+
+<!-- <div class="contacts">
+    <ul>
+        <li><a href="tel:+375555555">+375 (44) 55555555</a></li>
+        <li><a href="mailto:anna@gmail.com">anna@gmail.com</a></li>
+    </ul>
+    <ul>
+        <li><a href="skype:anna9394?call">anna9394</a></li>
+        <li><a href="https://github.com/anna9394">GitHub Account</a></li>
+    </ul>
+</div> -->
