--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
         </div>
     </div>
     <aside>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
+
+        </label>
+        </div>
         <figure class="logo-img">
             <img src="img/photo.jpg" alt="photo">
         </figure>
