--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
         <section class="english">
             <h2>English level</h2>
-            <p>Elementary</p>
+            <p>Pre-Intermidiate</p>
         </section>
         <section class="interest">
             <h2>Interests</h2>
